# jetson_workspace

install/: local_setup.sh  setup.sh
install/atmaca_flight_control/lib/atmaca_flight_control/: hedef_gps  offboard_node  sahte_hedef  target_navigation_node  telemetry_node
install/atmaca_flight_control/share/atmaca_flight_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atmaca_flight_control/share/atmaca_flight_control/cmake/: atmaca_flight_controlConfig-version.cmake  atmaca_flight_controlConfig.cmake
install/atmaca_flight_control/share/atmaca_flight_control/environment/: ament_prefix_path.dsv  path.dsv
install/atmaca_flight_control/share/atmaca_flight_control/launch/: flight_control_launch.py
install/atmaca_vision/lib/atmaca_vision/: camera_publisher_node  qr_detector_node  target_detection_node
install/atmaca_vision/share/atmaca_vision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atmaca_vision/share/atmaca_vision/cmake/: atmaca_visionConfig-version.cmake  atmaca_visionConfig.cmake
install/atmaca_vision/share/atmaca_vision/environment/: ament_prefix_path.dsv  path.dsv
install/microxrcedds_agent/lib/: libmicroxrcedds_agent.so.2.4.2
install/microxrcedds_agent/share/microxrcedds_agent/: package.sh
install/microxrcedds_agent/share/microxrcedds_agent/cmake/: microxrcedds_agentTargets-release.cmake
install/pars_bringup/share/pars_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pars_msgs/share/pars_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pars_msgs/share/pars_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_pars_msgs__rosidl_generator_cExport.cmake  export_pars_msgs__rosidl_generator_cppExport.cmake  export_pars_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  pars_msgsConfig-version.cmake  pars_msgsConfig.cmake  pars_msgs__rosidl_typesupport_cppExport-noconfig.cmake  pars_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  pars_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  pars_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/pars_msgs/share/pars_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/pars_msgs/share/pars_msgs/msg/: Data.idl  Data.msg  Target.idl  Target.msg
install/pkg_kamikaze/lib/pkg_kamikaze/: kamikaze
install/pkg_kamikaze/share/pkg_kamikaze/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pkg_kamikaze/share/pkg_kamikaze/cmake/: pkg_kamikazeConfig-version.cmake  pkg_kamikazeConfig.cmake
install/pkg_kamikaze/share/pkg_kamikaze/environment/: ament_prefix_path.dsv  path.dsv
install/pkg_srv/lib/pkg_srv/: mission_control_server
install/pkg_srv/share/pkg_srv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pkg_srv/share/pkg_srv/cmake/: ament_cmake_export_dependencies-extras.cmake  pkg_srvConfig-version.cmake  (+16 more)
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh
install/qr_detector/lib/qr_detector/: qr_detection_node
install/qr_detector/share/qr_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/siha_camera_pkg/lib/siha_camera_pkg/: camera_publisher
install/siha_camera_pkg/share/siha_camera_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/video_recorder_pkg/lib/video_recorder_pkg/: video_recorder_control_node  video_writer_node
install/video_recorder_pkg/share/video_recorder_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/atmaca_flight_control/: CMakeLists.txt  package.xml
src/atmaca_flight_control/launch/: flight_control_launch.py
src/atmaca_flight_control/src/: hedef_gps.cpp  offboard.cpp  sahte_hedef.cpp  target_navigation_node.cpp  telemetry_node.cpp
src/atmaca_vision/: CMakeLists.txt
src/atmaca_vision/src/: .target_detection_node.cpp.swp  camera_node.cpp  qr_detection_node.cpp  target_detection_node.cpp  target_detection_node.hpp
src/pars_bringup/: CMakeLists.txt
src/pars_bringup/launch/: sistem_baslat.launch.py
src/pars_msgs/: CMakeLists.txt
src/pars_msgs/msg/: Target.msg
src/pkg_kamikaze/: CMakeLists.txt  package.xml
src/pkg_kamikaze/src/: kamikaze.cpp
src/pkg_srv/: CMakeLists.txt
src/pkg_srv/src/: mission_control_server.cpp
src/qr_detector/: CMakeLists.txt  README.md
src/qr_detector/include/qr_detector/: qr_detection_node.hpp
src/qr_detector/launch/: qr_detection.launch.py
src/qr_detector/src/: .qr_detection_node.cpp.swp  qr_detection_node.cpp  qr_detection_node.cpp.save
src/siha_camera_pkg/src/: camera_publisher.cpp
src/video_recorder_pkg/: CMakeLists.txt  package.xml
src/video_recorder_pkg/src/: video_recorder_control_node.cpp  video_writer_node.cpp
(+3115 files in other folders)
