cmake_minimum_required(VERSION 3.8)
project(pkg_srv)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/MissionControl.srv"
    DEPENDENCIES std_msgs
)

add_executable(mission_control_server src/mission_control_server.cpp)

ament_target_dependencies(mission_control_server rclcpp std_msgs rosidl_default_runtime)

rosidl_target_interfaces(mission_control_server
  ${PROJECT_NAME} "rosidl_typesupport_cpp")

add_dependencies(mission_control_server ${PROJECT_NAME}__rosidl_typesupport_cpp)

install(TARGETS
   mission_control_server
  DESTINATION lib/${PROJECT_NAME}
)

ament_export_dependencies(rosidl_default_runtime)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

